--- a/Source/HomeAutomexWS/HomeAutomexLibrary/HomeAutomexLibrary.csproj
+++ b/Source/HomeAutomexWS/HomeAutomexLibrary/HomeAutomexLibrary.csproj
@@ -35,7 +35,7 @@
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\Downloads\Projects\BarackTestes\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.5.0.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.6.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -56,6 +56,8 @@
     <Compile Include="Entidade\Agendamento.cs" />
     <Compile Include="Entidade\Ambiente.cs" />
     <Compile Include="Entidade\Cenario.cs" />
+    <Compile Include="Entidade\UTDispositivo.cs" />
+    <Compile Include="Entidade\Log.cs" />
     <Compile Include="Entidade\Dispositivo.cs" />
     <Compile Include="Entidade\EntidadeBase.cs" />
     <Compile Include="Entidade\Modulo.cs" />
@@ -68,6 +70,8 @@
     <Compile Include="Entidade\Usuario.cs" />
     <Compile Include="Fachada\Fachada.cs" />
     <Compile Include="Negocio\AmbienteNegocio.cs" />
+    <Compile Include="Negocio\UTUtilizacaoNegocio.cs" />
+    <Compile Include="Negocio\LogNegocio.cs" />
     <Compile Include="Negocio\DispositivoNegocio.cs" />
     <Compile Include="Negocio\PortaModuloNegocio.cs" />
     <Compile Include="Negocio\RepositorioBase.cs" />
@@ -78,10 +82,12 @@
     <Compile Include="Negocio\UsuarioNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorio\AmbienteRepositorio.cs" />
-    <Compile Include="Repositorio\Database\IDatabaseContext.cs" />
-    <Compile Include="Repositorio\Database\RepositorioUnityOfWork.cs" />
+    <Compile Include="Repositorio\UTDispositivoRepositorio.cs" />
+    <Compile Include="Repositorio\LogRepositorio.cs" />
     <Compile Include="Repositorio\DispositivoRepositorio.cs" />
     <Compile Include="Repositorio\Map\AmbienteMap.cs" />
+    <Compile Include="Repositorio\Map\UTDispositivoMap.cs" />
+    <Compile Include="Repositorio\Map\LogMap.cs" />
     <Compile Include="Repositorio\PortaModuloRepositorio.cs" />
     <Compile Include="Repositorio\Map\PortaModuloMap.cs" />
     <Compile Include="Repositorio\TipoPortaRepositorio.cs" />
