--- a/Source/HomeAutomexWS/HomeAutomexLibrary/HomeAutomexLibrary.csproj
+++ b/Source/HomeAutomexWS/HomeAutomexLibrary/HomeAutomexLibrary.csproj
@@ -63,17 +63,16 @@
     <Compile Include="Entidade\Modulo.cs" />
     <Compile Include="Entidade\Perfil.cs" />
     <Compile Include="Entidade\Porta.cs" />
-    <Compile Include="Entidade\PortaModulo.cs" />
     <Compile Include="Entidade\Residencia.cs" />
     <Compile Include="Entidade\Sensor.cs" />
     <Compile Include="Entidade\TipoPorta.cs" />
     <Compile Include="Entidade\Usuario.cs" />
     <Compile Include="Fachada\Fachada.cs" />
     <Compile Include="Negocio\AmbienteNegocio.cs" />
+    <Compile Include="Negocio\PortaNegocio.cs" />
     <Compile Include="Negocio\UTUtilizacaoNegocio.cs" />
     <Compile Include="Negocio\LogNegocio.cs" />
     <Compile Include="Negocio\DispositivoNegocio.cs" />
-    <Compile Include="Negocio\PortaModuloNegocio.cs" />
     <Compile Include="Negocio\RepositorioBase.cs" />
     <Compile Include="Negocio\TipoPortaNegocio.cs" />
     <Compile Include="Negocio\ModuloNegocio.cs" />
@@ -82,14 +81,14 @@
     <Compile Include="Negocio\UsuarioNegocio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorio\AmbienteRepositorio.cs" />
+    <Compile Include="Repositorio\PortaRepositorio.cs" />
     <Compile Include="Repositorio\UTDispositivoRepositorio.cs" />
     <Compile Include="Repositorio\LogRepositorio.cs" />
     <Compile Include="Repositorio\DispositivoRepositorio.cs" />
     <Compile Include="Repositorio\Map\AmbienteMap.cs" />
     <Compile Include="Repositorio\Map\UTDispositivoMap.cs" />
     <Compile Include="Repositorio\Map\LogMap.cs" />
-    <Compile Include="Repositorio\PortaModuloRepositorio.cs" />
-    <Compile Include="Repositorio\Map\PortaModuloMap.cs" />
+    <Compile Include="Repositorio\Map\PortaMap.cs" />
     <Compile Include="Repositorio\TipoPortaRepositorio.cs" />
     <Compile Include="Repositorio\Map\TipoPortaMap.cs" />
     <Compile Include="Repositorio\Map\ModuloMap.cs" />
