--- a/Source/HomeAutomexMobile/HomeAutomex/AndroidManifest.xml
+++ b/Source/HomeAutomexMobile/HomeAutomex/AndroidManifest.xml
@@ -5,20 +5,22 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="17"
-        android:targetSdkVersion="17" />
+        android:minSdkVersion="16"
+        android:targetSdkVersion="16" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/homeautomex_logo"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
             android:name="br.com.adeusunibratec.mb.SplashActivity"
-            android:label="@string/title_activity_splash" >
+            android:label="@string/title_activity_splash" 
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen">
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,39 +29,48 @@
         </activity>
         <activity
             android:name="br.com.adeusunibratec.mb.PrincipalActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen">
         </activity>
         <activity
             android:name="br.com.adeusunibratec.mb.LoginActivity"
-            android:label="@string/title_activity_login" >
+            android:label="@string/title_activity_login"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen">
         </activity>
         <activity
             android:name="br.com.adeusunibratec.mb.ResidenciasActivity"
-            android:label="@string/title_activity_residencias" >
+            android:label="@string/title_activity_residencias" 
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen">
         </activity>
         <activity
             android:name="br.com.adeusunibratec.mb.OpcoesUsuariosActivity"
-            android:label="@string/title_activity_opcoes_usuarios" >
+            android:label="@string/title_activity_opcoes_usuarios" 
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen">
         </activity>
         <activity
             android:name="br.com.adeusunibratec.mb.FavoritosActivity"
-            android:label="@string/title_activity_favoritos" >
+            android:label="@string/title_activity_favoritos" 
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen">
         </activity>
         <activity
             android:name="br.com.adeusunibratec.ha.AmbienteActivity"
-            android:label="@string/title_activity_ambiente" >
+            android:label="@string/title_activity_ambiente"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen" >
         </activity>
         <activity
             android:name="br.com.adeusunibratec.ha.ConfiguracoesActivity"
-            android:label="@string/title_activity_configuracoes" >
+            android:label="@string/title_activity_configuracoes"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen" >
         </activity>
         <activity
             android:name="br.com.adeusunibratec.ha.CenarioActivity"
-            android:label="@string/title_activity_cenario" >
+            android:label="@string/title_activity_cenario" 
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen">
         </activity>
         <activity
             android:name="br.com.adeusunibratec.ha.ProgramacaoActivity"
-            android:label="@string/title_activity_programacao" >
+            android:label="@string/title_activity_programacao"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen" >
         </activity>
     </application>
 
